--- a/fly.toml
+++ b/fly.toml
@@ -1,8 +1,23 @@
-app = "nfc-icu-mcp"
+# fly.toml app configuration file generated for nfc-icu-mcp on 2025-12-24T17:06:18Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'nfc-icu-mcp'
+primary_region = 'yyz'
+
+[build]
 
 [http_service]
   internal_port = 8000
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
+  processes = ['app']
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
